--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
+<html lang ="en">
 <head>
-<meta charset="UTF-8">
-<meta viewport content="width=device-width, initial-scale=1.0">
-<title>Endangered Species</title>
-<link rel="icon" type = "image/png" href = "https://aestheticwallpapers.io/wallpaper/925843.jpg">
+
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+    <meta name = "description" content = "2Q Portfolio"/>
+    <meta name ="keywords" content= "2Q, Portfolio, Projects, Web Development" />
+    <meta name ="author" content= "HimigIsobel" />
 
 
+    <title>2QPortfolioCSLabastilla</title>
+    <link rel = "stylesheet" href = "styles.css">
 
 </head>
 <body>
-<h1>Hello WOrld</h1>
-<img src = "https://pre00.deviantart.net/176d/th/pre/i/2018/162/c/1/philippine_eagle__watercolor__2_by_abremson-dce3a1m.jpg" width = "300" alt = "Eagle">
+<header>
+    <div>
+        <h1> My Portfolio of my work in the 2nd Qtr</h1>
+    </div>
 
-<a href = "https://www.biography.com/musician/olivia-rodrigo">Best Pop Idol</a>
+    <nav>
+        <ul>
+            
+        <li><a href="./public/2Q1GCesiumLabastilla.html" > First Graded</a> </li>
 
-<p>I want Chuckie</p>
+        </ul>
 
+
+    </nav>
+
+</header>
+    
 </body>
+
 </html>
