--- a/public/2Q1GCesiumLabastilla.html
+++ b/public/2Q1GCesiumLabastilla.html
@@ -7,8 +7,11 @@
         <title>Musicals</title>
     </head>
 
-    <ul><li><a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a></li></ul>
-    <ul><li><a href="../index.html">Home</a></li></ul>
+    <nav>
+  <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a> |
+  <a href="../index.html">Home</a> |
+
+</nav>
 
 
     <body>
