--- a/public/2Q1GCesiumLabastilla.html
+++ b/public/2Q1GCesiumLabastilla.html
@@ -8,7 +8,8 @@
     </head>
 
     <nav>
-  <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a> |
+  <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a>
+  <a href="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">All about Broadway</a> |
   <a href="../index.html">Home</a> |
 
 </nav>
