--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
 
     <nav>
         <ul>
-            
-        <li><a href="./public/2Q1GCesiumLabastilla.html" > First Graded</a> </li>
+        
+        <li><a href="./public/2Q1GCesiumLabastilla.html" > First Graded Exercise</a> </li>
+            <nav>
+  <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a>
+  <a href="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">All about Broadway</a> |
+  <a href="../index.html">Home</a> |
+
+</nav>
 
         </ul>
 
