--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
 </head>
 <body>
+<body style="background-color:rgb(88, 28, 28);"></body>
 <header>
     <div>
-        <h1> My Portfolio of my work in the 2nd Qtr</h1>
+        <h1> Broadway Musicals</h1>
+        <h2>The History, Development, and General Culture of the General Theatrical Industry</h2>
     </div>
 
     <nav>
@@ -24,9 +26,9 @@
         
         <li><a href="./public/2Q1GCesiumLabastilla.html" > First Graded Exercise</a> </li>
             <nav>
+  <a href="../index.html">Home</a>
   <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a>
-  <a href="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">All about Broadway</a> |
-  <a href="../index.html">Home</a> |
+  <a href="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">All about Broadway</a> | |
 
 </nav>
 
