--- a/public/2Q1GCesiumLabastilla.html
+++ b/public/2Q1GCesiumLabastilla.html
@@ -17,6 +17,9 @@
 
     <body>
       <body style="background-color:rgb(88, 28, 28);"></body>
+        <h1 style="text-align:center;"> Broadway Musicals</h1>
+        <h2 style="text-align:center;">The History, Development, and General Culture of the General Theatrical Industry</h2>
+      <h1>All about Broadway</h1>
         <h1 style="text-align:center;">All about Broadway</h1> 
         <h2>General Information </h2>
         <p></p>Broadway is the oldest north-south thoroughfare in New York City. For years, it's attracted the world's most talented actors, singers, musicians, and dancers. A Broadway show is simply a show that has performed in Broadway. In order to be considered a Broadway theater, there must be 500 or more seats (theaters in Manhattan with less than 500 seats are considered Off-Broadway). When a show announces it is coming to Broadway, if they simultaneously set the first and final performance dates, they are considered a "limited run". But Broadway is famous for its "open runs" - where a show opens with the hopes of playing every single week for the next 20+ years! The vast majority of shows play 8 performances every week during their run. Each show will have its own schedule and it can change from week to week.</p>
