--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name = "description" content = "2Q Portfolio"/>
     <meta name ="keywords" content= "2Q, Portfolio, Projects, Web Development" />
     <meta name ="author" content= "HimigIsobel" />
+     <link rel="icon" type="image/jpg" href="favicon3.jpg">
 
 
     <title>2QPortfolioCSLabastilla</title>
@@ -23,8 +24,6 @@
 
     <nav>
         <ul>
-        
-        <li><a href="./public/2Q1GCesiumLabastilla.html" > First Graded Exercise</a> </li>
             <nav>
   <a href="../index.html">Home</a>
   <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a>
