--- a/index.html
+++ b/index.html
@@ -11,30 +11,77 @@
 
 
     <title>2QPortfolioCSLabastilla</title>
-    <link rel = "stylesheet" href = "styles.css">
 
 </head>
+
+<style>
+ body {
+  background: linear-gradient(to bottom, #2C0000, #4B0000, #300000);
+  color: #FCEFEF;
+        }
+
+    h1 {
+  font-family: "Garamond", Arial, sans-serif;
+  font-size: 5em; 
+  color: #ffffff;   
+}
+
+h2 {
+  font-family: "Playfair Display", Georgia, serif;
+  font-size: 2em;
+  color: #79786d;
+}
+
+nav {
+  margin-top: 18px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #F5D7D7;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  padding: 8px 14px;
+  border-radius: 6px;
+}
+
+nav a:hover {
+  background-color: #8B0000;
+  color: #FADADD;
+  box-shadow: 0 0 8px rgba(255, 182, 193, 0.6);
+}
+
+nav a:visited {
+  color: #EABFBF;
+}
+
+nav ul li {
+    border-right: 1px solid #ccc; /* Adjust color and thickness as needed */
+    padding-right: 10px; /* Space between item and divider */
+    padding-left: 10px; /* Space between divider and next item */
+}
+
+</style>
 <body>
-<body style="background-color:rgb(88, 28, 28);"></body>
 <header>
     <div>
-        <h1> Broadway Musicals</h1>
-        <h2>The History, Development, and General Culture of the General Theatrical Industry</h2>
-    </div>
+        <h1 style="text-align: center;">Broadway Musicals</h1>
+        <h2 style="text-align: center;">The History, Development, and General Culture of the General Theatrical Industry</h2>
 
-    <nav>
-        <ul>
-            <nav>
-  <a href="../index.html">Home</a>
-  <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a>
-  <a href="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">All about Broadway</a> | |
+        <nav>
+            <ul>
 
-</nav>
-
-        </ul>
-
-
-    </nav>
+    <li><a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a></li>
+    <li><a href="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">All about Broadway</a></li>
+    <li><a href="https://eenyweeny.github.io/2QPortfolioCSLopez/2QPortfolio/2Q1GCesiumLopez.html">Behind the Scenes</a></li>
+    <li><a href="../index.html">Home</a></li>
+                </li>
+            </ul>
+        </nav>
 
 </header>
     
