--- a/public/2Q1GCesiumLabastilla.html
+++ b/public/2Q1GCesiumLabastilla.html
@@ -10,13 +10,14 @@
 <nav>
     <a href="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">History of Broadway</a>
     <a href="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">All about Broadway</a> |
+    <a href="https://eenyweeny.github.io/2QPortfolioCSLopez/2QPortfolio/2Q1GCesiumLopez.html">Behind the Scenes</a> | |
+
     <a href="../index.html">Home</a> |
 
 </nav>
 
 
     <body>
-      <body style="background-color:rgb(88, 28, 28);"></body>
         <h1 style="text-align:center;"> Broadway Musicals</h1>
         <h2 style="text-align:center;">The History, Development, and General Culture of the General Theatrical Industry</h2>
 
